--- a/blogPrj/WebContent/WEB-INF/views/layouts.xml
+++ b/blogPrj/WebContent/WEB-INF/views/layouts.xml
@@ -18,7 +18,7 @@
 	    <put-attribute name="login_box" value="/WEB-INF/views/common/login_box.jsp"/>
 	    <put-attribute name="noticeArea" value="/WEB-INF/views/common/noticeArea.jsp"/>
 	    <put-attribute name="footer" value="/WEB-INF/views/common/footer.jsp"/>
-	    <put-attribute name="main" value="/WEB-INF/views/friend/news/fnewslist.jsp"/>
+	    <put-attribute name="main" value="/WEB-INF/views/topic/topiclist.jsp"/>
   	</definition>
   	
   	<definition name="login.tiles" template="/WEB-INF/views/member/login.jsp">
@@ -69,11 +69,11 @@
   	
   	<definition name="userInfo.tiles" template="/WEB-INF/views/member/userInfo.jsp"></definition>
   	<definition name="blogInfo.tiles" template="WEB-INF/views/member/blogInfo.jsp"></definition>
+	<!-- 메세지 -->
+	<definition name="sendMessage.tiles" template="/WEB-INF/views/message/sendMessage.jsp"></definition>
 
 
-
-
-
+	<!-- 메세지 -->
 <!--///////////// 블로그 레이아웃 타일즈/////////////////////////-->
 
  <!--블로그형///////////////////////////  --> 	
